Content slider div too short-fixed. Reason: elements with absolute positioning don't inherit the parent's width. You have to set width.

--- a/jq-content-slider/css/style.css
+++ b/jq-content-slider/css/style.css
@@ -57,6 +57,7 @@ h1 {
 	padding: 20px;
 	background: #7f7f7f;
 	background: rgba(0,0,0,0.5);
+	width: 100%;
 }
 
 #prev, #next {
